# rules_nodejs

./: .bazelrc  index.bzl
examples/multiple_node_versions/: BUILD.bazel  WORKSPACE
internal/node/: launcher.sh  node.bzl
nodejs/private/: yarn_versions.bzl
